[package]
name = "tmf-gen"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
description = "A tool to generate Rust code compatible with tmflib"

[dependencies]
clap = { version = "4.5.5", features = ["derive"]}
env_logger = "0.11.3"
log = "0.4.21"
openapiv3 = "2.0.0"
serde = "1.0.203"
serde_json = "1.0.117"
typify = "0.1.0"
