[package]
name = "tmf-gen"
version = "0.1.1"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
description = "A tool to generate Rust code compatible with tmflib"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
codegen = "0.2.0"
convert_case = "0.7.1"
env_logger = "0.11.6"
log = "0.4.25"
openapiv3 = "2.0.0"
prettyplease = "0.2.29"
schemars = "0.8.21"
serde = "1.0.217"
serde_json = "1.0.137"
syn = "2.0.66"
typify = "0.3.0"
